# Chat_App

./: CMakeLists.txt  README.md  REMADE.md  conanfile.txt  docker-compose.yml  start_all.bat
chat_server/: CMakeLists.txt
chat_server/src/: common.h  iocontext_pool.h  message.pb.h  status_grpc_client.h
chat_server1/: CMakeLists.txt
chat_server1/data/: config.ini
chat_server1/src/: chat_grpc_client.cpp  chat_grpc_client.h  chat_service_impl.cpp  common.h  config_mgr.cpp  config_mgr.h  cserver.h  csession.cpp  csession.h  logic_system.cpp  logic_system.h  main.cpp  message.grpc.pb.cc  message.grpc.pb.h  message.pb.cc  message.proto  msg_node.h  mysql_mgr.cpp  mysql_mgr.h  redis_mgr.cpp  redis_mgr.h  singleton.h  utils.h
chat_server2/: CMakeLists.txt
chat_server2/data/: config.ini
chat_server2/src/: chat_grpc_client.cpp  chat_grpc_client.h  chat_service_impl.cpp  chat_service_impl.h  common.h  config_mgr.cpp  config_mgr.h  cserver.cpp  csession.h  logic_system.cpp  logic_system.h  message.pb.h  mysql_mgr.cpp  mysql_mgr.h  redis_mgr.cpp  status_grpc_client.cpp  user_mgr.cpp  user_mgr.h
client/: CMakeLists.txt  rc.qrc
client/data/: config.ini
client/src/: Common.qml  Main.qml  common.h  http_mgr.cpp  http_mgr.h  main.cpp  singleton.h  tcp_mgr.cpp  tcp_mgr.h  user_mgr.cpp  user_mgr.h  user_model.cpp  user_model.h
client/src/base_components/: ButtonComp.qml  ChatBubbleComp.qml  ChatHeaderComp.qml  ChatListItem.qml  ContactListItem.qml  FriendRequestListItem.qml  TextEditComp.qml  ToastComp.qml  ToolButtonComp.qml
client/src/chat_components/: AddUserDialog.qml  ChatPageItem0.qml  CompoundList.qml  ContactDialog.qml  ContactList.qml  FriendRequestList.qml  MessageWindowList.qml  SearchList.qml  SideBarComp.qml
client/src/components/: ChatBubbleComp.qml  ChatHeaderComp.qml  ChatListItem.qml  CompoundList.qml  ContactList.qml  ContactListItem.qml  FriendRequestListItem.qml  MessageWindowList.qml  TextEditComp.qml  TextFieldComp.qml  TimerButtonComp.qml
client/src/models/: chat_list_model.cpp  chat_list_model.h  chat_message_model.cpp  chat_message_model.h  user_item.h  user_list_model.cpp  user_list_model.h
client/src/pages/: AddUserDialog.qml  ChatList.qml  ChatPageView.qml  Common.qml  CompoundList.qml  ContactDialog.qml  ContactList.qml  LoginPageView.qml  Main.qml  RegisterPageView.qml  ResetPageView.qml  SearchList.qml  SideBarComp.qml  chat_page.cpp  chat_page.h  login_page.cpp  login_page.h  register_page.cpp  register_page.h  reset_page.cpp  reset_page.h
docker/mysqlredis/: Dockerfile  start.sh
gate_server/: CMakeLists.txt  CopyRuntimeDependencies.cmake
gate_server/data/: config.ini
gate_server/src/: common.h  config_mgr.h  cserver.cpp  cserver.h  csession.cpp  csession.h  logic_system.cpp  logic_system.h  main.cpp  message.grpc.pb.cc  message.grpc.pb.h  message.pb.cc  message.pb.h  mysql_mgr.cpp  mysql_mgr.h  redis_mgr.cpp  status_grpc_client.cpp  verify_grpc_client.cpp  verify_grpc_client.h
status_server/: CMakeLists.txt
status_server/data/: config.ini
status_server/src/: chat_grpc_client.cpp  chat_grpc_client.h  common.h  iocontext_pool.cpp  message.pb.cc  message.pb.h  message.proto  mysql_mgr.cpp  mysql_mgr.h  redis_mgr.h  status_server.cpp  status_service_impl.cpp  status_service_impl.h
verify_server/: config.js  const.js  email.js  message.proto  proto.js  redis.js  server.js
